# Templates_ROS2

./: README.md  main.py
src/: dictionaries.py
src/#dir#_demo/: CMakeLists.txt  package.xml
src/#dir#_description/: package.xml
src/#dir#_description/launch/: view_robot.launch.py
src/#dir#_description/ros2_control/: ##.ros2_control.xacro
src/#dir#_description/urdf/: ##_description.urdf.xacro
src/#dir#_hardware/: CMakeLists.txt
src/#dir#_hardware/include/#dir#_hardware/: ##_system_position_only.hpp
src/#dir#_hardware/src/: ##_system_position_only.cpp
src/1/workspace/src/#dir#_description/: CMakeLists.txt
src/1/workspace/src/#dir#_description/urdf/: ##.urdf.xacro
src/1/workspace/src/#dir#_hardware/: package.xml
src/2/#Package_name#/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/2/#Package_name#/include/#Package_name#/: #Executable_name#.hpp
src/2/#Package_name#/launch/: start.py
src/2/#Package_name#/scripts/: #Executable_name#
src/2/#Package_name#/src/: #Executable_name#.cpp
src/2/#Package_name#/ui/: #Executable_name#.ui
